# pram

./: .coveragerc  LICENSE  pyproject.toml  tox.ini
.github/workflows/: branch-push.yaml
pram/: __init__.py  exception.py  field.py  model.py  tensor.py
pram/util/: typing.py
test/: spec.yaml  test_tensor.py
